--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Writer-Artist-Epidemiologist-Physician</title>
+		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Allerta+Stencil" />
+	<style>
+	p, h1 { font-family: "Allerta Stencil"; 
+		font-size: 14px; 
+		font-style: normal; 
+		font-variant: normal; 
+		font-weight: 400; 
+		line-height: 20px; } 	
+	</style>
 	</head>
 	<body>
 		    <p style="color:darkgrey;
