--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 		<title>Writer-Artist-Epidemiologist-Physician</title>
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Allerta+Stencil" />
 	<style>
-	p, h1 { font-family: "Allerta Stencil"; 
-		font-size: 14px; 
+	#myname { font-family: "Allerta Stencil"; 
+		text-align: center;
+		font-size: 20px; 
 		font-style: normal; 
 		font-variant: normal; 
 		font-weight: 400; 
@@ -14,11 +15,7 @@
 	</style>
 	</head>
 	<body>
-		    <p style="color:darkgrey;
-              text-indent:40px;
-              font-family: 'Times New Roman', Times, serif;
-              font-size:40px">R<sub>0</sub></p>
-		
+	<p id="myname"> Imran Mujawar </p>
 		<p> Checking if this works </p>
 		<h1> Title here!! </h1>
 	</body>
