--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 	<style>
 	#myname { font-family: "Allerta Stencil"; 
 		text-align: center;
-		font-size: 20px; 
+		font-size: 30px; 
 		font-style: normal; 
 		font-variant: normal; 
 		font-weight: 400; 
-		line-height: 20px; } 	
+		line-height: 20px; 
+		color: #808080} 	
 	</style>
 	</head>
 	<body>
