--- a/index.html
+++ b/index.html
@@ -5,19 +5,30 @@
 		<title>Writer-Artist-Epidemiologist-Physician</title>
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Allerta+Stencil" />
 	<style>
-	#myname { font-family: "Allerta Stencil"; 
+	#myname { 
+		font-family: "Allerta Stencil"; 
 		text-align: center;
 		font-size: 30px; 
 		font-style: normal; 
 		font-variant: normal; 
 		font-weight: 400; 
 		line-height: 20px; 
-		color: #808080} 	
+		color: #808080
+		} 
+	#mydesc {
+		font-family: "Aldrich"; 
+		text-align: center;
+		font-size: 20px; 
+		font-style: normal; 
+		font-variant: normal; 
+		font-weight: 200; 
+		line-height: 20px; 
+		color: #808080
+		}
 	</style>
 	</head>
 	<body>
 	<p id="myname"> Imran Mujawar </p>
-		<p> Checking if this works </p>
-		<h1> Title here!! </h1>
+	<p id="mydesc"> Writer | Artist | Physician-Epidemiologist | Data Scientist </p>
 	</body>
 </html>
