--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		font-variant: normal; 
 		font-weight: 400; 
 		line-height: 20px; 
-		color: #808080
+		color: #A9A9A9;
 		} 
 	#mydesc {
 		font-family: "Aldrich"; 
@@ -23,7 +23,7 @@
 		font-variant: normal; 
 		font-weight: 200; 
 		line-height: 20px; 
-		color: #808080
+		color: #A9A9A9;
 		}
 	</style>
 	</head>
