--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		color: #A9A9A9;
 		} 
 	#mydesc {
-		font-family: "Aldrich"; 
+		font-family: "Antic"; 
 		text-align: center;
 		font-size: 20px; 
 		font-style: normal; 
