--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		font-variant: normal; 
 		font-weight: 400; 
 		line-height: 20px; 
-		color: #A9A9A9;
+		color: #101010;
 		} 
 	#mydesc {
 		font-family: "Antic"; 
@@ -23,12 +23,12 @@
 		font-variant: normal; 
 		font-weight: 200; 
 		line-height: 20px; 
-		color: #A9A9A9;
+		color: #101010;
 		}
 	</style>
 	</head>
 	<body>
 	<p id="myname"> Imran Mujawar </p>
-	<p id="mydesc"> Writer | Artist | Physician-Epidemiologist | Data Scientist </p>
+	<p id="mydesc"> Writer &nbsp;|&nbsp; Artist &nbsp;|&nbsp; Physician-Epidemiologist &nbsp;|&nbsp; Data Scientist </p>
 	</body>
 </html>
