--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	</head>
 	<body>
 	<p id="myname"> Imran Mujawar </p>
-	<p id="mydesc"> Writer &nbsp;|&nbsp; Artist &nbsp;|&nbsp; Physician-Epidemiologist &nbsp;|&nbsp; Data Scientist </p>
+	<p id="mydesc"> Writer &nbsp;&nbsp;|&nbsp;&nbsp; Artist &nbsp;&nbsp;|&nbsp;&nbsp; Physician-Epidemiologist 
+		&nbsp;&nbsp;|&nbsp;&nbsp; Data Scientist </p>
 	</body>
 </html>
