--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		line-height: 5px; 
 		color: #282828;
 		}
-		body {background-color: grey}
+		body {background-color: #FFFFF8}
 	</style>
 	</head>
 	<body>
