--- a/index.html
+++ b/index.html
@@ -2,35 +2,332 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Writer-Artist-Epidemiologist-Physician</title>
-		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Allerta+Stencil" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Imran Mujawar</title>
+		<link rel="stylesheet" type="text/css"
+		href="//fonts.googleapis.com/css?family=Allerta+Stencil" />
 	<style>
-	#myname { 
-		font-family: "Allerta Stencil"; 
-		text-align: center;
-		font-size: 60px; 
-		font-style: normal; 
-		font-variant: normal; 
-		font-weight: 400; 
-		line-height: 20px; 
+	#myname {
+		font-family: "Allerta Stencil";
+		font-size: 40px;
+		font-style: normal;
+		font-variant: normal;
+		font-weight: 400;
+		line-height: 10px;
+		vertical-align: middle;
 		color: #282828;
-		} 
+		}
 	#mydesc {
-		font-family: "Antic"; 
+		font-family: "Antic";
 		text-align: center;
-		font-size: 20px; 
-		font-style: normal; 
-		font-variant: normal; 
-		font-weight: 200; 
-		line-height: 5px; 
+		font-size: 20px;
+		font-style: normal;
+		font-variant: normal;
+		font-weight: 200;
+		line-height: 5px;
 		color: #282828;
 		}
 		body {background-color: #FFFFF8}
+		img{
+		    width: 100%;
+		    height: 100%;
+		    object-fit: contain;
+		    }
+		#image{
+				   width: 100%;
+				   height:200px;
+					 float: center;
+				}
+		#image_ro{
+						   width: 50%;
+						   height:170px;
+							 float: left;
+						}
+
+		#image2{
+							 width: 50%;
+							 height:170px;
+							 float:left;
+						}
+
+				* {
+				  box-sizing: border-box;
+				}
+
+				body {
+				  margin: 0;
+				}
+
+				/* Style the header */
+				.header {
+				  padding: 20px;
+				  text-align: center;
+				}
+
+				/* Style the top navigation bar */
+				.topnav {
+				  overflow: hidden;
+				  background-color: #333;
+				}
+
+				/* Style the topnav links */
+				.topnav a {
+				  float: left;
+				  display: block;
+				  color: #f2f2f2;
+				  text-align: center;
+				  padding: 14px 16px;
+				  text-decoration: none;
+				}
+
+				/* Change color on hover */
+				.topnav a:hover {
+				  background-color: #ddd;
+				  color: black;
+				}
+
+				/* Create three equal columns that floats next to each other */
+				.column_main {
+				  float: left;
+				  width: 60%;
+				  padding: 15px;
+				}
+				/* Create three equal columns that floats next to each other */
+				.column_side {
+					float: left;
+					width: 40%;
+					padding: 40px;
+				}
+				/* Clear floats after the columns */
+				.row:after {
+				  content: "";
+				  display: table;
+				  clear: both;
+				}
+
+				.accordion
+				{
+				/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+				/* Change background color of accordion  */
+				background-color: #efefef;
+				/* Change text color of accordion  */
+				color: #444649;
+				/* Change font size */
+				font-size: 18px;
+				/* Change font style */
+				font-family:'Lato',Arial;
+				/* Change how fast or slow the accordion closes and opens */
+				transition: 0.6s;
+				/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+				/* ~~~Other parameters */
+				cursor: pointer;
+				  padding: 5px;
+				  width: 100%;
+				  border: 0 0 0 0;
+				  /* outline: none; */
+					display: inline-block;
+				}
+				.active, .accordion:hover {
+				/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+				/* Background color of panel when mousing over */
+				background-color: #00467F;
+				/* Text color of panel when mousing over   */
+				color: white;
+				}
+				/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+				/* Making changes to the plus sign in closed panel */
+				.accordion:after {
+				/* ~~~ plus symbol */
+				/* content: '\002B'; */
+				/* ~~~ color of plus symbol */
+				color: #BE0000;
+				font-weight: bold;
+				font-family:'Lato',Arial;
+				padding-right: 10px;
+				/* Aligning the text */
+				float: left;
+				/* Creating the left margin */
+				margin-left: 5px;
+				}
+				/* Making changes to the minus sign in open panel */
+				.active:after {
+				/* minus symbol */
+				/* content: "\2212"; */
+				  color: #FFFFFF;
+				}
+				/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+				/* Settings for the content for open panel */
+				.panel {
+				padding: 0 18px;
+				background-color: white;
+				max-height: 0;
+				overflow: hidden;
+				transition:
+				max-height 0.6s ease-out;
+				}
+
+				.acctitle{
+					vertical-align: middle;
+					float: left;
+				}
+
+				/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+				@media screen and (max-width:600px) {
+				  .column {
+				    width: 100%;
+				  }
+				}
 	</style>
 	</head>
 	<body>
+		<div class="header">
 	<p id="myname"> Imran Mujawar </p>
-	<p id="mydesc"> Writer &nbsp;&nbsp;|&nbsp;&nbsp; Artist &nbsp;&nbsp;|&nbsp;&nbsp; Physician-Epidemiologist 
-		&nbsp;&nbsp;|&nbsp;&nbsp; Data Scientist </p>
+	<p id="mydesc">
+		Writer &nbsp;&nbsp;|&nbsp;&nbsp;
+		Artist &nbsp;&nbsp;|&nbsp;&nbsp;
+		Physician &nbsp;&nbsp;|&nbsp;&nbsp;
+		Epidemiologist &nbsp;&nbsp;|&nbsp;&nbsp;
+		Data Scientist </p>
+	</div>
+
+<!-- Creating the menu tab line -->
+	<div class="topnav">
+  <a href="#">Resume</a>
+  <a href="#">Contact info</a>
+  <a href="#">Blog</a>
+</div>
+
+	<div class="column_main">
+
+<button class="accordion">
+	<div id="image2" style="text-align: left">
+		<img src="hazmat_khan.jpg" alt="Imran Mujawar">
+	</div>
+	<div class="acctitle"><h3><br><br>Hazmat Khan: Graphic Novel</h3></div>
+</button>
+<div class="panel">
+		<p><b>Logline</b>: An American doctor garbed in a Hazmat suit and Hijab combats bioterrorists,
+			who threaten to destroy the vibrant social fabric of her country.
+			She is part of an elite squad of the U.S. Army Medical Research Institute of Infectious Diseases
+			(USAMRIID), which responds to global biological threats of the highest level,
+			Bio-Safety Level-4 (BSL-4). <a href="#"><b>For more information...</b></a>
+</p>
+</div>
+
+<button class="accordion">
+	<div id="image_ro" style="text-align: left">
+		<img src="R_nought.jpg" alt="Imran Mujawar">
+	</div>
+	<div class="acctitle"><h3><br><br>Outbreak Detective/R<sub>0</sub></h3></div>
+</button>
+<div class="panel">
+		<p><b>Logline</b>: A very academic and somewhat reclusive epidemiologist,
+			who is one of the first African-American epidemiologists at the CDC,
+			and his team fight disease outbreaks around the world and at home during the '70s,
+			while confronting the explosive social issues and international intrigues
+			of their time.
+
+			<br>
+			<br>
+			<i>In collaboration with Alexis G. Stodghill,
+			a writer and television news producer at MSNBC in New York</i>
+</p>
+</div>
+
+<button class="accordion">
+	Outbreak Detective/R<sub>0</sub>
+</button>
+<div class="panel">
+		<p>Outbreak Detective/R<sub>0</sub>is an episodic procedural drama</p>
+</div>
+
+<button class="accordion">
+			Epidemic Intelligence
+</button>
+ <div class="panel">
+<p>3 people one  mission</p>
+</div>
+
+</div>
+
+
+<div class="column_side">
+	<div id="image">
+		<img src="profilepic.jpg" alt="Imran Mujawar">
+	</div>
+	<p>Stuf about me. blah blah blah hatever</p>
+</div>
+
+<!-- Java script that makes the panels expand and collapse -->
+<script>
+  // W3C's JS Code
+  var acc = document.getElementsByClassName("accordion");
+  var i;
+  // Open the first accordion
+  var firstAccordion = acc[0];
+  // var firstPanel = firstAccordion.nextElementSibling;
+  // firstAccordion.classList.add("active");
+  // firstPanel.style.maxHeight = firstPanel.scrollHeight + "px";
+  // Add onclick listener to every accordion element
+  for (i = 0; i < acc.length; i++) {
+    acc[i].onclick = function() {
+      // For toggling purposes detect if the clicked section is already "active"
+      var isActive = this.classList.contains("active");
+      // Close all accordions
+      var allAccordions = document.getElementsByClassName("accordion");
+      for (j = 0; j < allAccordions.length; j++) {
+        // Remove active class from section header
+        allAccordions[j].classList.remove("active");
+        // Remove the max-height class from the panel to close it
+        var panel = allAccordions[j].nextElementSibling;
+        var maxHeightValue = getStyle(panel, "maxHeight");
+      if (maxHeightValue !== "0px") {
+          panel.style.maxHeight = null;
+        }
+      }
+      // Toggle the clicked section using a ternary operator
+      isActive ? this.classList.remove("active") : this.classList.add("active");
+      // Toggle the panel element
+      var panel = this.nextElementSibling;
+      var maxHeightValue = getStyle(panel, "maxHeight");
+      if (maxHeightValue !== "0px") {
+        panel.style.maxHeight = null;
+      } else {
+        panel.style.maxHeight = panel.scrollHeight + "px";
+      }
+    };
+  }
+  // Cross-browser way to get the computed height of a certain element. Credit to @CMS on StackOverflow (http://stackoverflow.com/a/2531934/7926565)
+  function getStyle(el, styleProp) {
+  var value, defaultView = (el.ownerDocument || document).defaultView;
+  // W3C standard way:
+  if (defaultView && defaultView.getComputedStyle) {
+    // sanitize property name to css notation
+    // (hypen separated words eg. font-Size)
+    styleProp = styleProp.replace(/([A-Z])/g, "-$1").toLowerCase();
+    return defaultView.getComputedStyle(el, null).getPropertyValue(styleProp);
+  } else if (el.currentStyle) { // IE
+    // sanitize property name to camelCase
+    styleProp = styleProp.replace(/\-(\w)/g, function(str, letter) {
+      return letter.toUpperCase();
+    });
+    value = el.currentStyle[styleProp];
+    // convert other units to pixels on IE
+    if (/^\d+(em|pt|%|ex)?$/i.test(value)) {
+      return (function(value) {
+        var oldLeft = el.style.left, oldRsLeft = el.runtimeStyle.left;
+        el.runtimeStyle.left = el.currentStyle.left;
+        el.style.left = value || 0;
+        value = el.style.pixelLeft + "px";
+        el.style.left = oldLeft;
+        el.runtimeStyle.left = oldRsLeft;
+        return value;
+      })(value);
+    }
+    return value;
+  }
+}
+// Creating animation of column 2 in the Analytic framework to flip on click
+</script>
 	</body>
 </html>
