--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
 <button class="accordion">
 	<div id="image2" style="text-align: left">
-		<img src="hazmat_khan.jpg" alt="Imran Mujawar">
+		<img src="hazmat_khan.jpg" alt="Hazmat Khan">
 	</div>
 	<div class="acctitle"><h3><br><br>Hazmat Khan: Graphic Novel</h3></div>
 </button>
