--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
 <div class="column_side">
 	<div id="image">
-		<img src="profilepic.JPG" alt="Imran Mujawar">
+		<img src="profilepic.JPG" alt="Imran_Mujawar">
 	</div>
 	<p>Stuf about me. blah blah blah hatever</p>
 </div>
