--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 	<div id="image">
 		<img src="profilepic.JPG" alt="Imran Mujawar">
 	</div>
-	<p>Stuf about me. blah blah blah hatever</p>
+	<p>He's a physician-epidemiologist consulting with the CDC in Washington DC</p>
 </div>
 
 <!-- Java script that makes the panels expand and collapse -->
