--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
 			who threaten to destroy the vibrant social fabric of her country.
 			She is part of an elite squad of the U.S. Army Medical Research Institute of Infectious Diseases
 			(USAMRIID), which responds to global biological threats of the highest level,
-			Bio-Safety Level-4 (BSL-4). <a href="#"><b>For more information...</b></a>
+			Bio-Safety Level-4 (BSL-4). <a href="hazmatkhan.html"><b>For more information...</b></a>
 </p>
 </div>
 
