--- a/hazmatkhan.html
+++ b/hazmatkhan.html
@@ -8,8 +8,6 @@
 		href="//fonts.googleapis.com/css?family=Allerta+Stencil" />
 </head>  
 <body>
-<iframe src="hazmatkhan1.pdf" width="100%" height="3000px"> 
-This browser does not support PDFs. Please download the PDF to view it: Download PDF 
-</iframe>
+<iframe src="https://drive.google.com/file/d/1zTc8-Vgf1hgVQPkjY1YIrWJt-ZG_32j-/view?usp=sharing" width="640" height="480"></iframe>
 </body>
 </html>
