--- a/hazmatkhan.html
+++ b/hazmatkhan.html
@@ -8,6 +8,25 @@
 		href="//fonts.googleapis.com/css?family=Allerta+Stencil" />
 </head>  
 <body>
-<iframe src="https://drive.google.com/file/d/1zTc8-Vgf1hgVQPkjY1YIrWJt-ZG_32j-/view?usp=sharing" width="640" height="480"></iframe>
-</body>
+<iframe 
+src="//www.slideshare.net/slideshow/embed_code/key/GKJ6seI0YCqbLL" 
+width="668" 
+height="714" 
+frameborder="5" 
+marginwidth="5" 
+marginheight="5" 
+scrolling="yes" 
+style="border:1px 
+solid #CCC; 
+border-width:1px; 
+margin-bottom:5px; 
+max-width: 80%;" allowfullscreen> 
+</iframe> 
+<div style="margin-bottom:5px"> <strong> 
+<a href="//www.slideshare.net/ImranMujawar4/hazmatkhan" 
+title="Hazmatkhan" target="_blank">Hazmatkhan</a> </strong> from 
+<strong>
+<a href="https://www.slideshare.net/ImranMujawar4" 
+target="_blank">Imran Mujawar</a></strong> </div>
+	</body>
 </html>
