--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
 			She is part of an elite squad of the U.S. Army Medical Research Institute of Infectious Diseases
 			(USAMRIID), which responds to global biological threats of the highest level,
 			Bio-Safety Level-4 (BSL-4). 
-			<a href="https://drive.google.com/file/d/1zTc8-Vgf1hgVQPkjY1YIrWJt-ZG_32j-/view?usp=sharing">
+			<a href="hazmatkhan.html">
 			<b>For more information...</b></a>
 </p>
 </div>
