--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
 	<div id="image2" style="text-align: left">
 		<img src="hazmat_khan.jpg" alt="Hazmat Khan">
 	</div>
-	<div class="acctitle"><h3><br><br>Hazmat Khan: Graphic Novel</h3></div>
+	<div class="acctitle"><h3>Hazmat Khan: Graphic Novel</h3></div>
 </button>
 <div class="panel">
 		<p><b>Logline</b>: An American doctor garbed in a Hazmat suit and Hijab combats bioterrorists,
